@@ -111,6 +111,7 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::console::allow-untrusted", "no" },
 		{ "cupt::console::assume-yes", "no" },
 		{ "cupt::console::actions-preview::show-not-preferred", "for-upgrades" },
+		{ "cupt::console::actions-preview::show-only-summary", "no" },
 		{ "cupt::directory", "/" },
 		{ "cupt::directory::configuration", "etc/cupt" },
 		{ "cupt::directory::configuration::main", "cupt.conf" },
