@@ -41,6 +41,7 @@ cupt (2.3.0~) UNRELEASED; urgency=low
       - New options 'cupt::cache::limit-releases::by-codename',
         'cupt::cache::limit-releases::by-codename::type'.
       - New option 'cupt::console::actions-preview::show-not-preferred'.
+      - New option 'cupt::console::actions-preview::show-only-summary'.
     - system/worker:
       - Logging: log errors too.
       - Downloading package archives: include only those codename/component
